[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppxl-lite"
version = "2.0.0"
description = "A lightweight Python client for Perplexity AI API"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Anas Khan"}]
keywords = ["perplexity", "ai", "search", "api", "client"]
requires-python = ">=3.8"
dependencies = ["curl-cffi>=0.5.7"]

[project.urls]
Homepage = "https://github.com/anxkhn/ppxl_lite"
Repository = "https://github.com/anxkhn/ppxl_lite"
Issues = "https://github.com/anxkhn/ppxl_lite/issues"

[tool.setuptools.packages.find]
where = ["."]